# foglamp-notify-python35

./: .gitignore  CMakeLists.txt  Description  Package  README.md  README.rst  main.cpp  make_deb  notify35.py  notify_python35.cpp  plugin.cpp
include/: notify_python35.h
